Fixed shifts caused by new borders in nav bar; removed extra padding from tabs.

--- a/media/css/nootabs.css
+++ b/media/css/nootabs.css
@@ -21,7 +21,7 @@ ul.nootabs-menus li {
 }
 
 #galaxy-tabs li a {
-    padding: 8px 0 5px 5px;
+    padding: 7px 0 0 5px;
     height: 35px;
     display: block;
     line-height: 16px;
